crates/reinhardt-pages/tests/ui/page/fail/implicit_body_non_clone_capture.rs
use reinhardt_pages::page;

struct NotClone(String);

impl NotClone {
	fn label(&self) -> &str {
		&self.0
	}
}

fn main() {
	let handle = NotClone("owned".to_string());
	let _ = page!({
		div { { handle.label() } }
	});
}
